--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -1,14 +1,11 @@
 
-.content-wrapper>.content {
-
-  /*position: relative !important;  */
-  padding: 0px 0px !important;
-
-} 
-
  body {
    overflow: hidden !important;
  }
+
+.content-wrapper>.content {
+  padding: 0px 0px !important;
+} 
 
 #body_ui-proxyMap-map {
   
@@ -17,15 +14,15 @@
 }
 
 .airdatepicker {
-  /*background-color: black; */
+  background-color: #1f1f21;
+  border-color: #1f1f21;
+  color: #007bff;
 }
 
-/*
-.skin-midnight .sidebar-menu .fa {
-  font-size: medium;
+.airdatepicker--pointer {
+  background-color: #1f1f21;
+  border-color: #1f1f21;
 }
-
-*/
 
 .wrapper {
     overflow-x: hidden;
@@ -37,13 +34,12 @@
 }
 
 
-#panelTransits, #panelGPS {
+#panelTransits { 
   margin-top: 15px;
   position: absolute;
   z-index: 1;
   opacity: 0.92;
-  /* width: 370px; tak bylo wczesniej, dla danych z sql*/
-  width: 350px; 
+  width: 320px; 
 }
 
 
@@ -52,9 +48,17 @@
   position: absolute;
   z-index: 1;
   opacity: 0.92;
-  /* width: 280px; */
-  width: 410px; 
+  width: 400px; 
 }
+
+#panelReports {
+  margin-top: 90px;
+  position: absolute;
+  z-index: 1;
+  opacity: 0.92;
+  width: 390px; 
+}
+
 
 #body_ui-proxyMap-coordPanel {
 
@@ -133,12 +137,6 @@
   border-radius: 5px 0 0 5px;
 }
 
-/*
-#body_ui-proxyMap-analysis-quickStats{
-  z-index: 1;
-  opacity: 0.95;
-}
-*/
 
 #body_ui-proxyMap-optionsBtns-optionsPanel > .bttn-material-circle:hover {
   background-color: #8b27a8;
@@ -157,7 +155,6 @@
 #body_ui-proxyMap-btnCoord1:hover, #body_ui-proxyMap-btnCoord2:hover, #body_ui-proxyMap-btnCoord3:hover {
   background-color: #007bff;
   color: #fff;
-  /*border-color: #1161b8; */
 }
 
 
@@ -213,20 +210,10 @@
   width: 45px;
 }
 
-/*
-.nav-sidebar .nav-item .fa-circle {
-  color: #cf1313;
-  font-size: small !important;
-  padding: 14.5px 0;
+
+li.nav-item.dropdown {
+  font-size: 18px;
 }
-
-.nav-sidebar .nav-item .fa-arrow-circle-right {
-  width: 31px;
-  padding: 0;
-}
-
-*/
-
 
 
 .nav-pills .nav-link {
@@ -239,12 +226,6 @@
 .mapboxgl-ctrl-logo {
   display: none !important;
 }
-
-
-
-/*.navbar-nav .nav-item {
-  font-size: 17.5px;
-} */
 
 
 .leaflet-tooltip-right:before {
@@ -294,7 +275,6 @@
 }
 
 
-
 .leaflet-top.leaflet-left {
   right: 75px !important;
   left: unset !important;
@@ -316,7 +296,7 @@
 
 .leaflet-control-layers {
   right: 60px;
-  top: 70px;
+  top: 55px; 
   background-color: #454d55;
   opacity: 0.95;
   color: white;
@@ -336,6 +316,7 @@
 #body_ui-proxyMap-boxTable-tableTransits .rt-thead {
   display: none !important;
 }
+
 
 #body_ui-proxyMap-boxTable-tableDrivers .rt-thead {
   display: none !important;
@@ -370,117 +351,10 @@
   color: transparent;
 }
 
-/*
-.card {
-  background-color: none;
-  box-shadow: none;
+
+.rt-td.rt-align-left {
+    cursor: pointer !important;
 }
-*/
-
-/*
-@keyframes fadeInOut {
-  from {opacity: 0;}
-  to {opacity: 100;} 
-}
-
-*/
-
-
-/*
-.datepicker {
-  top: 460px !important;
-}
-*/
-
-
-
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-
-::-webkit-scrollbar-track {
-  background: #343a40; 
-  opacity: 0.9;
-}
- 
-
-::-webkit-scrollbar-thumb {
-  background: #797a80; 
-  border-radius: 10px;
-}
-
-
-::-webkit-scrollbar-thumb:hover {
-  background: #9d9fa6;
-  border-radius: 10px;
-}
-
-/*
-.rt-td.rt-td-select.rt-align-left {
-    display: none !important;
-}  */
-
-
-
-
-
-
-/* ten caly nizej zakomentowany kod dotyczy ikonki, ktora dodalem js-em do boxow, byla to ikona zaznaczania obszaru na mapie
-
-#body_ui-proxyMap-boxTable-btnDrawAreaTransits {
-  color: #adb5bd;
-  font-size: .95rem;
-  border: none;
-  background: none;
-  padding-top: 0;
-  padding-bottom: 0;
-  padding-right: 0;
-}
-
-#body_ui-proxyMap-boxTable-btnDrawAreaTransits .fa-times {
-  color: #e81e1e;
-  font-size: 1rem;
-}
-
-#body_ui-proxyMap-boxTable-btnDrawAreaTransits:hover {
-  color: #495057;
-}
-
-#body_ui-proxyMap-boxTable-btnDrawAreaTransits .fa-times:hover {
-  color: #c20e0e;
-}
-
-#body_ui-proxyMap-boxTable-btnDrawAreaDrivers {
-  color: #adb5bd;
-  font-size: .95rem;
-  border: none;
-  background: none;
-  padding-top: 0;
-  padding-bottom: 0;
-  padding-right: 0;
-}
-
-
-#body_ui-proxyMap-boxTable-btnDrawAreaDrivers .fa-times {
-  color: #e81e1e;
-  font-size: 1rem;
-}
-
-#body_ui-proxyMap-boxTable-btnDrawAreaDrivers:hover {
-  color: #495057;
-}
-
-
-#body_ui-proxyMap-boxTable-btnDrawAreaDrivers .fa-times:hover {
-  color: #c20e0e;
-}
-
-
-*/
-
-
-
 
 
 #body_ui-proxyMap-boxTable-tableTransits .rt-tr-group > .rt-tr-group .rt-td-select.rt-align-left {
@@ -496,7 +370,6 @@
 #body_ui-proxyMap-analysis-tableStats .rt-align-center.rt-th:first-child{
   padding-top: 12px;
 }
-
 
 
 #body_ui-proxyMap-analysis-tableStats {
@@ -532,10 +405,6 @@ input[type="checkbox"] {
   background-color: black;
 }
 
-/* to ew. odkomentowac, bez tego nie widac pagination w tabeli w dashboard
-.pagination-bottom {
-  display: none;
-} */
 
 .makeViolet {
   background-color: #75238c !important;
@@ -547,21 +416,6 @@ input[type="checkbox"] {
   color: #fff !important;
   border-color: #1161b8 !important;
 }
-
-/*
-.styleRefreshButton {
-  background-color: transparent !important;
-  border: none;
-  box-shadow: none !important;
-} */
-
-
-/*
-.styleRefreshButtonToggleColor{
-  color: #20a140 !important;
-}
-*/
-
 
 
 #sidebar_ui-refresh {
@@ -575,17 +429,16 @@ input[type="checkbox"] {
   margin: 6px 0 12px 13px;
 }
 
-#sidebar_ui-refresh :hover {
+#sidebar_ui-refresh:hover {
   color: #0fd485 !important;
 }
 
-/* active podowduje ze klikajac w button zmienia swoj kolor */
+
 #sidebar_ui-refresh :active {
   color: #22b573 !important;
 }
 
 
-/*#chart1, */
 #chart2, #chart3 {
   height: calc(100vh * 0.45);
   margin-top: 10px;
@@ -597,23 +450,61 @@ input[type="checkbox"] {
 }
 
 
+#body_ui-proxyMap-boxTable-downloadExcel {
+  background-color: #128a54;
+  height: 50px;
+  color: white;
+  padding-top: 12px;
+  width: 200px;
+  border: 1px solid #0c633c;
+  margin-left: 75px;
+  margin-top: 12px;
+}
+
+#body_ui-proxyMap-boxTable-downloadExcel:hover {
+  background-color: #0c633c;
+  border: 1px solid #0c633c;
+}
 
 .ReactTable .rt-table {
   overflow-x: hidden;
   border-radius: 5px;
 }
 
-/*
-.nav-sidebar .nav-item .fa-sync-alt {
-  color: #20a140;
+#shiny-notification-toast {
+  width: 240px;
+  color: white;
+  background-color: #41bf8d;
+  border: 1px solid #3aa67b;
+  text-align: center;
+  letter-spacing: 1px;
 }
 
-.nav-sidebar .nav-item .fa-sync-alt:hover {
-  color: #23c24a;
+.btn-tool {
+  padding-top: 0;
 }
 
-*/
+
+::-webkit-scrollbar {
+  width: 10px;
+}
 
 
+::-webkit-scrollbar-track {
+  background: #343a40; 
+  opacity: 0.9;
+}
+ 
+
+::-webkit-scrollbar-thumb {
+  background: #797a80; 
+  border-radius: 10px;
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+  background: #9d9fa6;
+  border-radius: 10px;
+}
 
 
